# test_hard_qode

./: pyproject.toml
myonlineschool/: manage.py
myonlineschool/myonlineschool/: asgi.py  settings.py  urls.py  wsgi.py
myonlineschool/product/: admin.py  models.py  permissions.py  serializers.py  service.py  urls.py  validators.py  views.py
myonlineschool/product/migrations/: 0001_initial.py
myonlineschool/student/: admin.py  models.py  permissions.py  serializers.py  views.py
myonlineschool/student/migrations/: 0001_initial.py
